--- a/01_stats/03_wilks.ipynb
+++ b/01_stats/03_wilks.ipynb
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot 1$\\sigma$ confidence set"
+    "### Plot confidence sets"
    ]
   },
   {
@@ -229,16 +229,16 @@
     "                         st.chi2.ppf(st.chi2.cdf(1.5, 1), NDF), # etc.\n",
     "                         st.chi2.ppf(st.chi2.cdf(2.0, 1), NDF)])\n",
     "\n",
-    "\n",
-    "    \n",
     "    # ----------------------------------------------\n",
     "    # compute statistic at every grid point\n",
     "    # then reshape to a 2d array\n",
     "    # ----------------------------------------------      \n",
     "    xstep = (xmax - xmin)/xbins\n",
     "    ystep = (ymax - ymin)/ybins\n",
+    "    \n",
     "    x     = np.arange(xmin, xmax, xstep) + xstep/2\n",
     "    y     = np.arange(ymin, ymax, ystep) + ystep/2\n",
+    "    \n",
     "    X, Y  = np.meshgrid(x, y)\n",
     "    x     = X.flatten()\n",
     "    y     = Y.flatten()\n",
@@ -272,7 +272,8 @@
     "            ypos = ymin + 0.9*(ymax-ymin)\n",
     "\n",
     "            ax.text(xpos, ypos, \n",
-    "                r'$s: %6.1f$\\,\\,\\,\\,$b: %6.1f$' % (s, b), fontsize=ftsize)\n",
+    "                r'$s: %6.1f$\\,\\,\\,\\,$b: %6.1f$' % (s, b), \n",
+    "                    fontsize=ftsize)\n",
     "\n",
     "    ax.grid()\n",
     "\n",
