--- a/01_stats/03_rootn.ipynb
+++ b/01_stats/03_rootn.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exercise 3: $\\sqrt{N}$ Upper Limits\n",
     " >__Created__:  29 Sep. 2017 Harrison B. Prosper<br>\n",
@@ -11,7 +15,7 @@
     "\n",
     "\n",
     "In this exercise, we shall determine the relative\n",
-    "frequency with which statements of the form  $$N + \\sqrt{N} > \\theta,$$\n",
+    "frequency with which statements of the form  $$\\theta < N + \\sqrt{N},$$\n",
     "are true in an ensemble of 50,000 experiments, each associated with a _different_ mean count $\\theta$.\n",
     "We assume that each experiment yields a _single_ count $N$. Note that in the real world, unless the phenomenon being\n",
     "investigated does not exist - in which case the mean count is zero, it is highly unlikely that every\n",
@@ -25,7 +29,7 @@
     "with mean $\\theta_\\max = 10$.  Then we'll plot the coverage as a function of $\\theta$.\n",
     "\n",
     "   \n",
-    "Each experiment obtains a count $N$. The statement $$N + \\sqrt{N} > \\theta,$$ is either _True_ of _False_, where $\\theta$ is the mean count for that experiment. Ordinarily, we do not know the mean count $\\theta$ associated with an experiment. However, in a simulated world we typically do. Therefore, we can determine whether or not each statement is true. In the limit of an infinitely large sample of experiments, the relative frequency with which statements of the form $N + \\sqrt{N} > \\theta$ are true is called the __coverage__ probability. Note: the latter is a property of the *population* or, as we physicists prefer to say, *ensemble* to which the statements belong and *not* a property of any given statement. Consequently, if a given statement is *imagined* to be a embedded in a different ensemble, then, in general, the coverage probability will change. This is an example of the *reference class problem*. Absolute probabilities do not exist; all are conditional!\n",
+    "Each experiment obtains a count $N$. The statement $$\\theta < N + \\sqrt{N},$$ is either _True_ of _False_, where $\\theta$ is the mean count for that experiment. Ordinarily, we do not know the mean count $\\theta$ associated with an experiment. However, in a simulated world we typically do. Therefore, we can determine whether or not each statement is true. In the limit of an infinitely large sample of experiments, the relative frequency with which statements of the form $\\theta < N + \\sqrt{N}$ are true is called the __coverage__ probability. Note: the latter is a property of the *population* or, as we physicists prefer to say, *ensemble* to which the statements belong and *not* a property of any given statement. Consequently, if a given statement is *imagined* to be a embedded in a different ensemble, then, in general, the coverage probability will change. This is an example of the *reference class problem*. Absolute probabilities do not exist; all are conditional!\n",
     "\n",
     "__The Frequentist Principle__ The goal of frequentist analyses is to guarantee the following: over an (infinite) ensemble of statements, *which could be about different things*, a minimum fraction, $p = \\textrm{CL}$, of these statements will be true. The CL is called the __confidence level__. The clever thing is to invent procedures in which the CL is specified _a priori_. For Gaussian random variables $x$ statements of the form $\\mu \\in [x - \\sigma, x + \\sigma]$, where $\\mu$ is the mean of the Gaussian, which, in principle, could vary from one  experiment to the next, are true 68.3% of the time."
    ]
@@ -87,8 +91,8 @@
    "source": [
     "def performExperiments(theta, theta_max=True, ran=np.random, n=NEXP):\n",
     "    \n",
-    "    # generate n mean values if theta_max is true and take theta as the maximum\n",
-    "    # value of the\n",
+    "    # generate n mean values if theta_max is true and \n",
+    "    # take theta as the maximum value of theta\n",
     "    if theta_max:\n",
     "        theta = ran.uniform(0, theta, n)\n",
     "    \n",
@@ -105,8 +109,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Part 1\n",
-    "Set $b = 3$."
+    "### Part 1\n",
+    "Set $\\theta_\\max = 3$."
    ]
   },
   {
@@ -158,7 +162,8 @@
     "    # determine true and false statements\n",
     "    t = theta < U\n",
     "    \n",
-    "    # compute coverage probability (i.e., fraction of true statements)\n",
+    "    # compute coverage probability \n",
+    "    # (i.e., fraction of true statements)\n",
     "    k  = t.sum()     # number of true statements\n",
     "    p  = float(k)/n\n",
     "    \n",
@@ -185,6 +190,7 @@
    ],
    "source": [
     "results = computeCoverage(theta, U1)\n",
+    "\n",
     "print(f\"coverage: {results[0]:8.3f} {results[1]:8.3f}\")"
    ]
   },
@@ -192,8 +198,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Part 2\n",
-    "Set $b = 10$."
+    "### Part 2\n",
+    "Set $\\theta_\\max = 10$."
    ]
   },
   {
@@ -221,8 +227,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Part 3\n",
-    "Plot coverage as a function of $\\theta$. Note this is an upper limit, so we expect the confidence level to be\n"
+    "### Part 3\n",
+    "Plot coverage as a function of $\\theta$. This is an upper limit, so for large $N$ we expect the confidence level to be that of a single-sided 1-standard deviation interval."
    ]
   },
   {
@@ -240,7 +246,9 @@
    ],
    "source": [
     "theta   = np.arange(0.1, 10.0, 0.05)\n",
+    "\n",
     "expts   = [performExperiments(x, theta_max=False) for x in theta]\n",
+    "\n",
     "results = [(t, computeCoverage(t, u)[0]) for t, _, u in expts]\n",
     "\n",
     "results = np.array(results).T\n",
@@ -274,7 +282,8 @@
     "    ymin= 0\n",
     "    ymax= 1\n",
     "    ax.set_ylim(ymin, ymax)\n",
-    "    ax.set_ylabel(r'$P(\\theta < \\overline{\\theta}(N)|\\theta)$', fontsize=FONTSIZE) \n",
+    "    ax.set_ylabel(r'$P(\\theta < \\overline{\\theta}(N)|\\theta)$', \n",
+    "                  fontsize=FONTSIZE) \n",
     "    \n",
     "    #ax.set_title(\"coverage\")\n",
     "    \n",
@@ -365,7 +374,8 @@
     "\n",
     "theta   = results[0]\n",
     "coverage= results[1]\n",
-    "plot_coverage(theta, coverage, filename='rootn_coverage_range_4000.png')"
+    "plot_coverage(theta, coverage, \n",
+    "              filename='rootn_coverage_range_4000.png')"
    ]
   },
   {
