--- a/01_stats/03_wilks.ipynb
+++ b/01_stats/03_wilks.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,15 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def best_fit(statistic, D):\n",
+    "    \n",
     "    def nll(params, *args):\n",
     "        s, b = params\n",
     "        t, D = args\n",
-    "    return t(D, s, b)\n",
+    "        return t(D, s, b)\n",
+    "    \n",
     "    # --------------------\n",
     "    # find best-fit value\n",
     "    # --------------------\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -183,13 +185,13 @@
        "                       [ 1.561e+01,  9.388e+00]]), array([ 7.225e-11,  8.698e-11,  2.264e-10]))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = best_fit(nll, statistic, bag)\n",
+    "results = best_fit(statistic, bag)\n",
     "results"
    ]
   },
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +313,179 @@
    ],
    "source": [
     "plot_confidence_set(statistic, bag, results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check coverage\n",
+    "Choose a *fixed* parameter point $(s_0, b_0)$.\n",
+    "  1. simulate NEXP experiments\n",
+    "  1. compute statistic $t(D)$ for each experiment\n",
+    "  1. compute $cdf(t(D) = P(\\chi^2 < t(D)|s_0, b_0)$\n",
+    "  1. count how often $cdf < CL$\n",
+    "  1. compute coverage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true s:   15.6\n",
+      "true b:    9.4\n",
+      "coverage:  0.681\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 0. choose a \"true\" parameter point\n",
+    "s0, b0 = results.x\n",
+    "bag.s0 = s0      # choose as signal mean\n",
+    "bag.b0 = b0      # choose as background mean\n",
+    "NEXP   = 10000   # number of experiments to simulate\n",
+    "\n",
+    "print(f'true s: {s0:6.1f}')\n",
+    "print(f'true b: {b0:6.1f}')\n",
+    "\n",
+    "# 1. simulate experiments\n",
+    "N0 = st.poisson.rvs(bag.s0 + bag.b0, size=NEXP)\n",
+    "M0 = st.poisson.rvs(bag.k  * bag.b0, size=NEXP)\n",
+    "\n",
+    "# 2. compute statistic for each experiment\n",
+    "bag.N = N0\n",
+    "bag.M = M0\n",
+    "t = statistic(bag, s0, b0)\n",
+    "\n",
+    "# 3. compute cdf assuming t is a chi2 variate of 2 degrees of freedom\n",
+    "ndf = 2\n",
+    "cdf = st.chi2.cdf(t, ndf)\n",
+    "\n",
+    "# 4. count how often confidence set includes true means\n",
+    "CL  = 0.683\n",
+    "k   = cdf < CL\n",
+    "\n",
+    "# 5. compute coverage\n",
+    "coverage = k.sum() / NEXP\n",
+    "\n",
+    "print(f'coverage: {coverage:6.3f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make an animated GIF of confidence sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_1sigma_confidence_set(t, D, results=None,\n",
+    "                        xbins=30, xmin=0, xmax=30, \n",
+    "                        ybins=30, ymin=8, ymax=11,\n",
+    "                        filename='confidence_set.png',\n",
+    "                        fgsize=(5, 5), ftsize=18):\n",
+    "                        \n",
+    "    # make 1 sub-plot\n",
+    "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=fgsize)\n",
+    "    \n",
+    "    ax.set_xlim(xmin, xmax)\n",
+    "    ax.set_xlabel(r'$s$', fontsize=ftsize)\n",
+    "    \n",
+    "    ax.set_ylim(ymin, ymax)\n",
+    "    ax.set_ylabel(r'$b$', fontsize=ftsize)\n",
+    "    \n",
+    "    # compute chi2 level for 2 degrees of freedom\n",
+    "    # for 1sigma\n",
+    "    NDF = 2\n",
+    "    mylevels = np.array([st.chi2.ppf(st.chi2.cdf(1.0, 1), NDF)])\n",
+    "\n",
+    "    # ----------------------------------------------\n",
+    "    # compute statistic at every grid point\n",
+    "    # then reshape to a 2d array\n",
+    "    # ----------------------------------------------      \n",
+    "    xstep = (xmax - xmin)/xbins\n",
+    "    ystep = (ymax - ymin)/ybins\n",
+    "    \n",
+    "    x     = np.arange(xmin, xmax, xstep) + xstep/2\n",
+    "    y     = np.arange(ymin, ymax, ystep) + ystep/2\n",
+    "    \n",
+    "    X, Y  = np.meshgrid(x, y)\n",
+    "    x     = X.flatten()\n",
+    "    y     = Y.flatten()\n",
+    "    \n",
+    "    N, M  = D.N, D.M\n",
+    "    F     = t(D, x, y).reshape(X.shape)\n",
+    "\n",
+    "    # use levels to compute desired contours\n",
+    "    cs = ax.contour(X, Y, F, \n",
+    "                    extent=(xmin, xmax, ymin, ymax),\n",
+    "                    levels=mylevels, \n",
+    "                    linewidths=2,\n",
+    "                    cmap='rainbow') \n",
+    "\n",
+    "    # annotate contours\n",
+    "    cs.levels= [r'$1.0\\sigma$']\n",
+    "\n",
+    "    ax.clabel(cs, cs.levels, inline=True, \n",
+    "              fontsize=18, fmt='%s',  \n",
+    "              colors='black')\n",
+    "\n",
+    "    ax.scatter(D.s0, D.b0, s=80, c='black')\n",
+    "\n",
+    "    ax.grid()\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    plt.savefig(filename)\n",
+    "    \n",
+    "    plt.close() # close file so we don't have too many open at once\n",
+    "    \n",
+    "    #plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames = []\n",
+    "for i in range(100):\n",
+    "    j = i + 1\n",
+    "    filename = 'f%3.3d.png' % j\n",
+    "    filenames.append(filename)\n",
+    "    \n",
+    "    bag.N = N0[i]\n",
+    "    bag.M = M0[j]\n",
+    "    plot_1sigma_confidence_set(statistic, bag, filename=filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import imageio.v2 as im\n",
+    "\n",
+    "# make gif\n",
+    "with im.get_writer('coverage.gif', mode='I', fps=2) as writer:\n",
+    "    for filename in filenames:\n",
+    "        image = im.imread(filename)\n",
+    "        writer.append_data(image)\n",
+    "        \n",
+    "for filename in filenames:\n",
+    "    os.system(f'rm -f {filename:s}')"
    ]
   },
   {
