add simulation-based example

--- a/02_ml/mnist_cnn.ipynb
+++ b/02_ml/mnist_cnn.ipynb
@@ -59,7 +59,7 @@
     "A high-level view is a good way to represent the structure of a model.  But, it is also good to try to understand the details...at least once. As is often true, a detailed mathematical description of a complicated function is made easier using an example. \n",
     "\n",
     "#### Convolutional layer\n",
-    "The data into the first convolutional layer are a sequence of single channel (gray scale) images $\\mathbf{x}$ of shape $(n, 1, 28, 28)$, that is, the data  form a tensor comprising $n$ images, each with a single channel ($C = 1)$, and each a $(28, 28)$ matrix of pixels. This tensor is cross-correlated with a 4D tensor of weights $\\mathbf{w}_0$, with shape $(4, 1, 5, 5)$. We shall refer to the latter as a __kernel__ and each of its $4 \\times 1$, $(5, 5)$, matrices (or 2D tensors) as a __filter__. The first index of the kernel is the number of __output channels__ (here, 4), the second is the number of __input channels__ (here, 1). Therefore, a given $(5, 5)$ filter is identified by two indices: its output and input channel numbers. The last two indices of the kernel are the height (5) and width (5), respectively, of its filters. \n",
+    "The data into the first convolutional layer are a sequence of single channel (gray scale) images $\\mathbf{x}$ of shape $(n, C, H, W)=(n, 1, 28, 28)$, that is, the data  form a tensor comprising $n$ images, each with a single channel ($C = 1)$, and each a $(28, 28)$ matrix of pixels. This tensor is cross-correlated with a 4D tensor of weights $\\mathbf{w}_0$, with shape $(4, 1, 5, 5)$. We shall refer to the latter as a __kernel__ and each of its $4 \\times 1$ $(5, 5)$ matrices (or 2D tensors) as a __filter__. The first index of the kernel is the number of __output channels__ (here, 4), the second is the number of __input channels__ (here, 1). Therefore, a given $(5, 5)$ filter is identified by two indices: its output and input channel numbers. The last two indices of the kernel are the height (5) and width (5), respectively, of its filters. \n",
     "\n",
     "(Unfortunately, the jargon is not consistent across the machine learning literature. What we call a filter is indeed often referred to as a filter, but it is also called a kernel, and what we call a kernel, that is, a stack of one or more filters, often has no specific name attached to it!) \n",
     "\n",
@@ -75,7 +75,7 @@
     "\n",
     "Since the input image is a $(28, 28)$ matrix padded with 2 strips of pixels around the boundary, and each filter is a $(5, 5)$ matrix,\n",
     "the output of the convolution step will be a tensor of shape $(n, 4, 28, 28)$ provided that we use a __stride__ of 1, that is, if during the cross-correlation, we shift the filters a horizontal or vertical step of 1 pixel. Other choices are possible. By\n",
-    "construction, the output of this convolutional layer is $n$, 4-channel images, of the same size as the original, by construction.\n",
+    "construction, the output of this convolutional layer is $n$, 4-channel images, of the same size, that is, $(H, W) = (28, 28)$, as the original, by choice.\n",
     "\n",
     "#### Coarse-graining layer\n",
     "A convolutional layer is usually followed by a coarse-graining, that is, down-sampling, layer that reduces the number of pixels per image. In this example, the number of pixels in the image created by the convolutional layer is reduced by a factor 2 in both directions; that is, each of the 4 channels of the $(28, 28)$ image is down-sampled into a $(14, 14)$ channel by replacing the corresponding group of pixels of shape $(2, 2)$ with a pixel whose value is set to the largest value among the group of 4 pixels.  This operation, called __max-pooling__, can be expressed as\n",
@@ -88,21 +88,25 @@
     "\n",
     "After max-pooling, the output tensor has shape $(n, 4, 14, 14)$. A relu __activation function__ is applied to each element of this tensor in order to complete one sequence of operations: cross-correlation, down-sampling, and activation. \n",
     "\n",
-    "A second convolutional layer follows. This time, however, its input must match the output of the previous max-pooling operation, which contains $n$ sequences of images, each with 4 channels, and each a $(14, \\, 14)$ matrix padded with a 2-pixel boundary. The kernel in this layer contains $16 \\times 4$, $(5, 5)$, filters, that is, it is of shape $(16, 4, 5, 5)$. Each of the 64, $(5, 5)$, filters is cross-correlated with the corresponding input channel. The cross-correlated input channels are then summed pixel by pixel to yield  a 16-channel output image from this layer. In other words, we arrive at an output tensor of size $(n, 16, 14, 14)$.\n",
+    "A second convolutional layer follows. This time, however, its input must match the output of the previous max-pooling operation, which contains $n$ sequences of images, each with 4 channels, and each a $(14, \\, 14)$ matrix padded with a 2-pixel boundary. The kernel in this layer contains $16 \\times 4$ $(5, 5)$-filters, that is, it is of shape $(16, 4, 5, 5)$. Each of the 64 $(5, 5)$-filters is cross-correlated with the corresponding input channel. The cross-correlated input channels are then summed pixel by pixel to yield  a 16-channel output image from this layer. In other words, we arrive at an output tensor of size $(n, 16, 14, 14)$.\n",
     "\n",
-    "Finally, a second max-pooling layer is applied, which transforms the 16-channel image of shape $(14, 14)$ to a 16-channel image of shape $(7, 7)$. The image is then flattened into a 1D tensor (basically, a 1D array) of size $16 \\times 7 \\times 7 = 784$, which are the inputs of the final linear layer with 10 outputs. Finally, a softmax function is applied.\n",
+    "Finally, a second max-pooling layer is applied, which transforms the 16-channel image of shape $(14, 14)$ to a 16-channel image of shape $(7, 7)$. The image is then flattened into a 1D tensor (basically, a 1D array) of size $16 \\times 7 \\times 7 = 784$, which are the inputs of the final linear layer with 10 outputs. Finally, a softmax function is applied to the 10 outputs of the final linear layer so that the 10 outputs of the CNN sum to one. This makes sense because the outputs are estimates of the __class probabilities__, that is, the probabilities that an input image belongs to any one of the ten digit classes. \n",
+    "\n",
+    "The class with the largest probability among the 10 probabilities is taken as the class to which the input image belongs. This decision strategy is an example of a __greedy policy__: we always go for the best choice. However, the best choice is not necessarily always the best strategy. If we could quantify the confidence level of each of the ten probabilities, it may happen that we decide to choose the next highest probability if the confidence level associated with it was higher than that associated with the largest probability.\n",
     "\n",
     "\n",
     "### Discussion\n",
-    "The net effect of the sequence of nested layers, prior to flattening, is to transform a multi-channel input image into a multi-channel output image. The hope is that the output image captures the most relevant features of the input image thereby improving the accuracy of the subsequent classification. But, why use cross-correlation?\n",
+    "The net effect of the sequence of nested layers, prior to flattening, is to transform an input image, comsisting of one or more channels, into a multi-channel output image. The hope is that the multi-channel output image captures the most relevant features of the input image thereby improving the accuracy of the subsequent classification. \n",
+    "\n",
+    "But, why use cross-correlation?\n",
     "\n",
     "The intuition behind the cross-correlation operation is that natural images tend to have similar features in different parts of the image. A filter that is sensitive to vertical features would tend to produce an output image that enhances vertical features, while suppressing the expression of horizontal features. It therefore seems plausible that if one could design filters that are sensitive to different image features, the set of filters could potentially transform an image into another in which the most relevant features are enhanced while the least relevant are suppressed. \n",
     "\n",
     "In the early days of image recognition systems, researchers tried to describe in software what they considered to be the most relevant features in images. This proved to be extremely difficult and success was limited. Today hand-coding is no longer necessary because the values of the parameters of the kernels can be determined automatically by minimizing an appropriate (average) loss function. However, the mere fact that a large number of images is needed to fit these parameters is evidence that current machine learning methods and models, while spectacularly successful, are still far removed from human learning methods and models. \n",
     "\n",
-    "A young child need be shown labeled objects, cat, dog, doll, truck, car, just a few times before being able to classify them correctly. The child can do this even when the objects are presented to her or him in orientations that differ from the ones used during the \"training phase\". This extraordinary ability suggests that the child's brain constructs a fault tolerant model of each object using only its most relevant features and is able to match rapidly the input image with the stored, or perhaps auto-reconstructed, fault tolerant model. The model is clearly fault tolerant because the child is able to ignore \"faults\" such as viewing the objects in lighting that differs from that used during the \"training phase\", or ignoring the fact that now the car has lost a couple of wheels or the doll is now wearing different clothes and so on. \n",
+    "A young child need be shown labeled objects, cat, dog, doll, truck, car, just a few times before being able to classify them correctly. The child can do this even when the objects are presented to her or him in orientations that differ from the ones used during the \"training phase\". This extraordinary ability suggests that the child's brain constructs a fault tolerant model of each object using only its most relevant features and is able to match rapidly the input image with the stored, or more likely the auto-reconstructed, fault tolerant model. The model is clearly fault tolerant because the child is able to ignore \"faults\" such as viewing the objects in lighting that differs from that used during the \"training phase\", or ignoring the fact that now the car has lost a couple of wheels or the doll is now wearing different clothes and so on. \n",
     "\n",
-    "In spite of the truly impressive recent successes, it is clear that machine learning-based artificial intelligence still has a long way to go. Of course, it could be that the age-old goal of building machines that think like humans is simply the wrong goal. After all, there are already many instances in which researchers have inadvertently succeeded in producing machines that mimic our prejudices, which is hardly progress. Therefore, perhaps we should embrace the \"artificial\" in artificial intelligence and the possibility that these machines will inevitably \"think\" differently from us. The trick, of course, is to have them \"think\" in a way that improves the human condition. It would not be helpful if, for example, our super-intelligent machine concluded that the best way to solve climate change is to eliminate one of its culprits, namely, the species Homo sapiens!"
+    "In spite of the truly impressive recent successes, it is clear that machine learning-based artificial intelligence (AI) still has a long way to go. Of course, it could be that the age-old goal of building machines that think like humans is simply the wrong goal. After all, there are already many instances in which researchers have inadvertently succeeded in producing machines that mimic our prejudices, which is hardly progress. Therefore, perhaps we should embrace the \"artificial\" in AI and the possibility that these machines will inevitably \"think\" differently from us. The trick, of course, is to have them \"think\" in a way that improves the human condition. It would not be helpful if, for example, our super-intelligent machine concluded that the best way to solve climate change is to eliminate one of its culprits, namely, the species Homo sapiens!"
    ]
   },
   {
@@ -290,14 +294,10 @@
    "metadata": {},
    "source": [
     "### Define model\n",
-    "Use some notebook magic to write the following cell to a file, which can then be imported into another notebook. Note: it seems we need to import the saved class to make it visible to the notebook!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We shall use layer normalization to ensure that inputs into every layer are approximately bounded and are of order unity. (See https://arxiv.org/abs/1607.06450).\n",
+    "\n",
+    "#### Layer normalization\n",
+    "\n",
+    "We shall use layer normalization to ensure that inputs into every layer of the machine learning (ML) model are approximately bounded and of order unity. (See https://arxiv.org/abs/1607.06450).\n",
     "\n",
     "$\n",
     "\\begin{align}\n",
@@ -310,85 +310,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 2, 3, 3])\n",
       "\n",
-      "original tensor\n",
+      "original tensor: shape torch.Size([2, 2, 3, 3])\n",
       "\n",
-      "tensor([[[[5., 5., 5.],\n",
-      "          [5., 5., 5.],\n",
-      "          [5., 5., 5.]],\n",
+      "tensor([[[[-0.6213, -0.7623, -0.5629],\n",
+      "          [-0.2899, -1.4238, -1.0568],\n",
+      "          [ 0.4648,  1.3743, -0.3688]],\n",
       "\n",
-      "         [[4., 4., 4.],\n",
-      "          [4., 4., 4.],\n",
-      "          [4., 4., 4.]]],\n",
+      "         [[-1.0096, -1.1469, -0.6697],\n",
+      "          [ 0.4330, -1.0223,  2.2642],\n",
+      "          [-0.2740,  0.2101,  0.8617]]],\n",
       "\n",
       "\n",
-      "        [[[0., 0., 0.],\n",
-      "          [0., 0., 0.],\n",
-      "          [0., 0., 0.]],\n",
+      "        [[[-0.8326, -0.4534, -1.2020],\n",
+      "          [ 0.7549, -0.2196,  1.7226],\n",
+      "          [ 0.7812, -1.8071,  0.0489]],\n",
       "\n",
-      "         [[2., 2., 2.],\n",
-      "          [2., 2., 2.],\n",
-      "          [2., 2., 2.]]]])\n",
+      "         [[ 0.5796,  0.7543, -0.6927],\n",
+      "          [ 0.0079, -0.4308, -1.7922],\n",
+      "          [-0.1844, -1.1293, -0.4611]]]])\n",
       "\n",
-      "mean, var\n",
-      "tensor(4.5000) tensor(0.2500)\n",
-      "tensor(1.) tensor(1.)\n",
-      "\n",
+      "compute normalized tensor \"by hand\"\n",
       "normalized tensor\n",
+      "tensor([[[[-0.4464, -0.5958, -0.3844],\n",
+      "          [-0.0952, -1.2965, -0.9077],\n",
+      "          [ 0.7044,  1.6679, -0.1789]],\n",
       "\n",
-      "tensor([[[[ 1.0000,  1.0000,  1.0000],\n",
-      "          [ 1.0000,  1.0000,  1.0000],\n",
-      "          [ 1.0000,  1.0000,  1.0000]],\n",
-      "\n",
-      "         [[-1.0000, -1.0000, -1.0000],\n",
-      "          [-1.0000, -1.0000, -1.0000],\n",
-      "          [-1.0000, -1.0000, -1.0000]]],\n",
+      "         [[-0.8577, -1.0032, -0.4977],\n",
+      "          [ 0.6706, -0.8711,  2.6106],\n",
+      "          [-0.0783,  0.4344,  1.1249]]],\n",
       "\n",
       "\n",
-      "        [[[-1.0000, -1.0000, -1.0000],\n",
-      "          [-1.0000, -1.0000, -1.0000],\n",
-      "          [-1.0000, -1.0000, -1.0000]],\n",
+      "        [[[-0.6357, -0.2197, -1.0409],\n",
+      "          [ 1.1058,  0.0368,  2.1673],\n",
+      "          [ 1.1345, -1.7047,  0.3313]],\n",
       "\n",
-      "         [[ 1.0000,  1.0000,  1.0000],\n",
-      "          [ 1.0000,  1.0000,  1.0000],\n",
-      "          [ 1.0000,  1.0000,  1.0000]]]])\n"
+      "         [[ 0.9134,  1.1051, -0.4822],\n",
+      "          [ 0.2863, -0.1950, -1.6884],\n",
+      "          [ 0.0753, -0.9611, -0.2282]]]])\n",
+      "\n",
+      "compute normalized tensor with LayerNorm\n",
+      "normalized tensor\n",
+      "tensor([[[[-0.4464, -0.5958, -0.3844],\n",
+      "          [-0.0952, -1.2965, -0.9077],\n",
+      "          [ 0.7044,  1.6679, -0.1789]],\n",
+      "\n",
+      "         [[-0.8577, -1.0032, -0.4977],\n",
+      "          [ 0.6706, -0.8711,  2.6106],\n",
+      "          [-0.0783,  0.4344,  1.1249]]],\n",
+      "\n",
+      "\n",
+      "        [[[-0.6357, -0.2197, -1.0409],\n",
+      "          [ 1.1058,  0.0368,  2.1673],\n",
+      "          [ 1.1345, -1.7047,  0.3313]],\n",
+      "\n",
+      "         [[ 0.9134,  1.1050, -0.4822],\n",
+      "          [ 0.2863, -0.1950, -1.6883],\n",
+      "          [ 0.0753, -0.9611, -0.2282]]]])\n"
      ]
     }
    ],
    "source": [
+    "# Create a 4D tensor of shape (2,2,3,3) filled with random numbers\n",
     "x = torch.randn(2, 2, 3, 3)\n",
-    "print(x.shape)\n",
+    "z = torch.zeros(2, 2, 3, 3)\n",
     "\n",
-    "# fill tensor\n",
-    "x = x - x\n",
-    "for N in range(x.shape[0]):\n",
-    "    for C in range(x.shape[1]):\n",
-    "        x[N,C] += np.random.randint(10)\n",
-    "print('\\noriginal tensor\\n')\n",
+    "print('\\noriginal tensor: shape %s\\n' % str(x.shape))\n",
     "print(x)\n",
     "\n",
-    "print('\\nmean, var')\n",
+    "\n",
+    "print('\\ncompute normalized tensor \"by hand\"')\n",
     "m = torch.mean(x[0])\n",
     "v = torch.var(x[0], unbiased=False)\n",
-    "print(m, v)\n",
+    "z[0] = (x[0] - m)/np.sqrt(v)\n",
     "\n",
     "m = torch.mean(x[1])\n",
     "v = torch.var(x[1], unbiased=False)\n",
-    "print(m, v)\n",
+    "z[1] = (x[1] - m)/np.sqrt(v)\n",
+    "\n",
+    "print('normalized tensor')\n",
+    "print(z)\n",
     "\n",
     "# with no learning parameters\n",
+    "print('\\ncompute normalized tensor with LayerNorm')\n",
     "nm = nn.LayerNorm(x.shape[1:], elementwise_affine=False)\n",
     "y  = nm(x) \n",
-    "print('\\nnormalized tensor\\n')\n",
+    "print('normalized tensor')\n",
     "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use some notebook magic to write the following cell to a file, which can then be imported into another notebook. Note: it seems we need to import the saved class to make it visible to the notebook!"
    ]
   },
   {
