freeze iminuit cell

--- a/02_ml/01_phantom_simdata.ipynb
+++ b/02_ml/01_phantom_simdata.ipynb
@@ -23,10 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run phantom_model.ipynb\n",
-    "\n",
-    "# nice wrapper around the CERN minimization package MINUIT\n",
-    "import iminuit as im"
+    "%run phantom_model.ipynb"
    ]
   },
   {
@@ -121,29 +118,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perform fit using the *iminuit* wrapper"
+    "### Perform fit using the *iminuit* wrapper\n",
+    "\n",
+    "If you have iminuit installed, unfreeze this cell by commenting out the %%script command."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Fitted values of parameters for phantom model\n",
-      " 2.81 +/- 0.19\n",
-      "70.41 +/- 0.45\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%script false --no-raise-error\n",
+    "\n",
     "# Tell Minuit that the cost function is negative log-likelihood\n",
     "# rather than a chisquare so that the Hessian is scaled correctly.\n",
     "#nll.errordef = im.Minuit.LEAST_SQUARES\n",
+    "\n",
+    "# nice wrapper around the CERN minimization package MINUIT\n",
+    "import iminuit as im\n",
+    "\n",
     "nll.errordef = im.Minuit.LIKELIHOOD\n",
     "\n",
     "bag.box = False # impose a boundary on parameter space\n",
