add more comments to SBI/LFI example

--- a/02_ml/01_phantom_simdata.ipynb
+++ b/02_ml/01_phantom_simdata.ipynb
@@ -198,7 +198,7 @@
     "    \\lambda(D, \\theta) & = \\sqrt{\\frac{1}{N} \\sum_{i=1}^N \\left(\\frac{x_i - \\mu(z_i, \\theta)}{\\sigma_i}\\right)^2},\n",
     "\\end{align}\n",
     "\n",
-    "where $x_i \\pm \\sigma_i$ is the measured distance modulus for supernova $i$, $z_i$ is its measured redshift, and $\\mu(z_i, \\theta)$ is the predicted distance modulus given the assumed cosmological model and a point$\\theta$ in the parameter space of the model.\n",
+    "where $x_i \\pm \\sigma_i$ is the measured distance modulus for supernova $i$, $z_i$ is its measured redshift, and $\\mu(z_i, \\theta)$ is the predicted distance modulus given the assumed cosmological model and a point $\\theta$ in the parameter space of the model.\n",
     "\n",
     "We sample using a uniform prior, but, in principle, any reasonable prior will do."
    ]
@@ -242,10 +242,10 @@
     "# reserve space for test statistics\n",
     "l  = np.zeros(N)\n",
     "\n",
-    "# reserve space for test statistics using observed data\n",
+    "# reserve space for test statistics computed using observed data\n",
     "l0 = np.zeros(N)\n",
     "\n",
-    "# reserve space for test statistics using simulated \"observed\" data\n",
+    "# reserve space for test statistics computed using simulated \"observed\" data\n",
     "lo = np.zeros(N)\n",
     "    \n",
     "# loop over datasets to be generated\n",
@@ -255,27 +255,24 @@
     "        print(f'\\r{i:10d}', end='')\n",
     "\n",
     "    # (1) test statistic using simulated distance moduli for current hypothesis (n, H)\n",
-    "    #     compute distance moduli \n",
     "    n  = bag.n1[i]\n",
     "    H  = bag.H1[i]\n",
-    "    mu = distance_modulus(bag.z, n, H)\n",
-    "\n",
-    "    #     sample distance moduli\n",
-    "    x  = np.random.normal(loc=mu, scale=bag.dx)\n",
+    "    \n",
+    "    mu = distance_modulus(bag.z, n, H)          # predict distance moduli\n",
+    "    x  = np.random.normal(loc=mu, scale=bag.dx) # sample distance moduli\n",
     "    y  = (x - mu)/bag.dx \n",
     "    l[i] = (y**2).mean()\n",
     "    \n",
     "    # (2) test statistic using observed distance moduli for current hypothesis (n, H)\n",
-    "    y = (bag.x - mu)/bag.dx\n",
+    "    y  = (bag.x - mu)/bag.dx\n",
     "    l0[i] = (y**2).mean()\n",
     "        \n",
-    "    # (3) test statistic for simulated \"observed data\" for current hypothesis\n",
+    "    # (3) test statistic for simulated \"observed data\"\n",
     "    n  = bag.n2[i]  # choose randomly selected parameters at which to simulate data.\n",
-    "    H  = bag.H2[i]  #\n",
+    "    H  = bag.H2[i] \n",
     "    mu = distance_modulus(bag.z, n, H)\n",
-    "    \n",
     "    x  = np.random.normal(loc=mu, scale=bag.dx)\n",
-    "    y  = (x - mu)/bag.dx   # compute for current hypothesis\n",
+    "    y  = (x - mu)/bag.dx\n",
     "    lo[i] = (y**2).mean()\n",
     "\n",
     "# take square-root of test statistics to reduce their dynamic ranges\n",
