--- a/02_ml/02_phantom_inference.ipynb
+++ b/02_ml/02_phantom_inference.ipynb
@@ -23,13 +23,13 @@
     "where the index $n$ and the Hubble constant $H_0$ are the parameters of the model. See notebook __phantom_model.ipynb__ for details. \n",
     "\n",
     "### Test statistic\n",
-    "We use the following test statistic \n",
+    "We use the test statistic \n",
     "\n",
     "\\begin{align}\n",
     "    \\lambda(D, \\theta) & = \\sqrt{\\frac{1}{N} \\sum_{i=1}^N \\left(\\frac{x_i - \\mu(z_i, \\theta)}{\\sigma_i}\\right)^2},\n",
     "\\end{align}\n",
     "\n",
-    "See __phantom_simdata.ipynb__ for details.\n",
+    "See __01_phantom_simdata.ipynb__ for details.\n",
     "\n",
     "The standard deviation $\\sigma_i$ is a measure of the accuracy of the distance modulus measurement. In the simulations, we assume that the redshifts and standard deviations are known with high precision and that only variations in the distance moduli $D = \\{ x_i \\}$ are simulated. For the Union 2.1 compilation the standard deviations vary from one supernova to the next. Data in which the accuracy of the measurements vary are referred to as *heteroscedastic* data. Notice that the test statistic gives greater weight to distance moduli measured with greater accuracy. \n",
     "\n",
