add more comments

--- a/02_ml/phantom_model.ipynb
+++ b/02_ml/phantom_model.ipynb
@@ -12,7 +12,7 @@
     "Updated: Mar. 28, 2023, HBP\n",
     "\n",
     "### Cosmological Model\n",
-    "The cosmological model used in the simulation-based tutorial (__phantom.ipynb__) is defined by the dimensionless energy density \n",
+    "The cosmological model used in the simulation-based tutorial (__02_phantom_inference.ipynb__) is defined by the dimensionless energy density \n",
     "\\begin{equation}\n",
     "    \\Omega(a) = \\exp(a^n - 1) \\, / \\, a^3,\n",
     "\\end{equation}\n",
@@ -24,7 +24,7 @@
     "          & = \\sqrt{e} \\, 2^{\\frac{3}{2 n}}  \\gamma\\left(\\frac{3}{2 n}, \\frac{a^n}{2}\\right) \\, / \\, n , \n",
     "\\end{align}\n",
     "\n",
-    "where $\\gamma(a, x) = \\int_0^x \\, t^{a - 1} \\, e^{-t} \\, dt$ is the \n",
+    "where $H_0$ is Hubble's constant in Km/s/Mpc and $\\gamma(a, x) = \\int_0^x \\, t^{a - 1} \\, e^{-t} \\, dt$ is the \n",
     "[lower incomplete gamma function](https://en.wikipedia.org/wiki/Incomplete_gamma_function). The inverse function\n",
     "\n",
     "\\begin{equation}\n",
@@ -53,14 +53,14 @@
     "\n",
     "The quantity\n",
     "\\begin{equation}\n",
-    "    \\mu(z, \\theta) = 5 \\log_{10}[(1 + z) \\, \\sin(\\sqrt{-\\Omega_K} \\, u(z, \\theta))\\, / \\, \\sqrt{-\\Omega_K}] - 5 \\log_{10}(H_0) + 5 \\log_{10}(c) + 25,\n",
+    "    \\mu(z, \\theta) = 5 \\log_{10}[(1 + z) \\, \\sin(\\sqrt{-\\Omega_K} \\, u(z, \\theta))\\, / \\, \\sqrt{-\\Omega_K}] + 5 \\log_{10}(c \\, / \\, H_0 / 10^{-5} \\textrm{Mpc}),\n",
     "\\end{equation}\n",
-    "where\n",
+    "where $c$ is the speed of light in vacuum, in Km/s, and \n",
     "\\begin{equation}\n",
     "    u(z, \\theta) \\equiv \\int_{1/(1+z)}^{1} \\frac{da}{a^2\\sqrt{\\Omega(a)}} ,\n",
     "\\end{equation}\n",
     "\n",
-    "is the theoretical prediction for the __distance modulus__, an astronomical measure of distance. $\\Omega_K$ is the curvature parameter, which we set to zero; that is, we assume a model universe in which the global geometry of space, defined by hypersurfaces with $t = \\textrm{constant}$, is flat. With $\\Omega_K = 0$, our cosmological model is defined by only two parameters, namely, $n$ and and the Hubble constant $H_0$. The distance modulus simplifies to \n",
+    "is the theoretical prediction for the __distance modulus__, an astronomical measure of distance. $\\Omega_K$ is the curvature parameter, which we set to zero; that is, we assume a model universe in which the global geometry of space, defined by hypersurfaces with $t = \\textrm{constant}$, is flat. With $\\Omega_K = 0$, our cosmological model is defined by only two parameters, namely, $n$ and the Hubble constant $H_0$. The distance modulus simplifies to \n",
     "\n",
     "\\begin{align}\n",
     "    \\mu(z, \\theta) \n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "id": "FA1Y5VCv20XZ"
    },
@@ -130,8 +130,8 @@
    "metadata": {},
    "source": [
     "\\begin{align}\n",
-    "    \\mu(z, \\theta) & = 5 \\log_{10}[(1 + z) \\, \\sin(\\sqrt{-\\Omega_K} \\, u(z, \\theta))\\, / \\, \\sqrt{-\\Omega_K}] - 5 \\log_{10}(H_0) + 5 \\log_{10}(c) + 25, \\\\\n",
-    "    & = 5 \\log_{10}\\left[ (1 + z) c \\, u(z, \\theta) \\, /\\,  H_0 \\right] + 25,\n",
+    "    \\mu(z, \\theta) \n",
+    "    & = 5 \\log_{10}\\left[ (1 + z) \\, u(z, \\theta) \\, /\\,  H_0 \\right] + 5 \\log_{10}(c) + 25,\n",
     "\\end{align}\n",
     "\n",
     "setting $\\Omega_K = 0$."
@@ -139,19 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def u(z, n):\n",
-    "    q = 2*n\n",
-    "    b = 1/q\n",
+    "    b = 0.5/n\n",
     "    x = 0.5/(1+z)**n\n",
     "    A = sp.special.gamma(b)\n",
-    "    A = A**q\n",
-    "    A = np.exp(0.5) * (2*A)**b\n",
-    "    y = A * (sp.special.gammainc(b, 0.5) - sp.special.gammainc(b, x))\n",
-    "    return y/n\n",
+    "    A*= np.exp(0.5) * 2**b\n",
+    "    return A * (sp.special.gammainc(b, 0.5) - sp.special.gammainc(b, x)) / n\n",
     "\n",
     "class DistanceModulus:\n",
     "    def __init__(self):\n",
@@ -176,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Big rip\n",
+    "### Time of big rip\n",
     "\n",
     "\\begin{equation}\n",
     "    H_0 t_\\textrm{rip} = \\sqrt{e} \\, 2^{\\frac{3}{2n}} \\, \\Gamma\\left(\\frac{3}{2n}\\right) \\, / \\, n,\n",
@@ -198,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
