--- a/02_ml/phantom_model.ipynb
+++ b/02_ml/phantom_model.ipynb
@@ -342,7 +342,7 @@
     "              zmin=ZMIN, zmax=ZMAX, \n",
     "              mumin= MUMIN, mumax=MUMAX, \n",
     "              ftsize=12, \n",
-    "              fgsize=(5, 4)):\n",
+    "              fgsize=(5.5, 4)):\n",
     "  \n",
     "    # set size of figure\n",
     "    plt.figure(figsize=fgsize)\n",
@@ -361,13 +361,13 @@
     "    plt.ylabel('$x$', fontsize=16)\n",
     "    \n",
     "    # annotate \n",
-    "    xpos   = 0.3 # as a fraction of x-range  \n",
+    "    xpos   = 0.2 # as a fraction of x-range  \n",
     "    scribe = Scribe(xpos, line=6, ftsize=ftsize)\n",
     "    scribe.write('The Union2.1 Compilation')     \n",
     "    scribe.write('The Supernova Cosmology Project')\n",
     "       \n",
     "    if nll:\n",
-    "        filename = bag.name + '_union_fit.png'\n",
+    "        filename = 'fig_' + bag.name + '_union_fit.pdf'\n",
     "        \n",
     "        # res:   fitted parameters\n",
     "        # p:     parameters to be passed to distanceModulus\n",
@@ -379,18 +379,25 @@
     "        nz   = 100\n",
     "        zstep= (zmax - zmin) / nz\n",
     "        z    = np.arange(zmin+zstep/2, zmax, zstep)\n",
+    "        \n",
     "        n    = bag.res[0]\n",
+    "        dn   = np.sqrt(bag.cov[0,0])\n",
+    "        \n",
     "        H0   = bag.res[1]\n",
+    "        dH0  = np.sqrt(bag.cov[1,1])\n",
+    "        \n",
     "        mu   = distance_modulus(z, n, H0)\n",
     "\n",
-    "        plt.plot(z, mu, color='red', label=f'{bag.name:s} model')\n",
+    "        plt.plot(z, mu, color='red', label='model')\n",
     "        \n",
     "        scribe.write(r\"$\\chi^{2} / {\\rm ndf} = %5.1f / %d = %5.2f$\"%\\\n",
     "                     (chi2, ndf, chi2/ndf))\n",
+    "        scribe.write(r\"$n = %6.2f \\pm%-6.2f$\" % (n, dn))\n",
+    "        scribe.write(r\"$H_0 = %6.2f \\pm%-6.2f$ km/s/Mpc\" % (H0, dH0))\n",
     "        \n",
     "        plt.legend(fontsize=14)\n",
     "    else:\n",
-    "        filename = \"type1a_union_2_1_data.png\"\n",
+    "        filename = \"type1a_union_2_1_data.pdf\"\n",
     "    \n",
     "    # tighten layout so that image is fully\n",
     "    # contained within viewport\n",
